# BetterAuthRust

./: .env  .env.example  .replit  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
docs/: advanced_features.md  api.md  endpoints.md  implementation_guide.md  integration_guide.md  performance_optimizations.md
migrations/2023-10-10-000000_create_users/: up.sql
migrations/2023-10-10-000001_create_sessions/: up.sql
migrations/2023-10-10-000002_create_mfa/: up.sql
migrations/2023-10-10-000003_create_webauthn_credentials/: down.sql  up.sql
src/: accessibility.rs  breach_detection.rs  config.rs  errors.rs  hipaa_compliance.rs  hybrid_encryption.rs  index.ts  main.rs  proxy_email.rs  risk_scoring.rs  schema.rs  tests.rs  webauthn.rs  webauthn_simplified.rs
src/api/: accessibility-service.ts  api-client.ts  auth-service.ts  breach-detection-service.ts  hipaa-compliance-service.ts  hybrid-encryption-service.ts  index.ts  proxy-email-service.ts  risk-scoring-service.ts
src/db/: memory.rs  mod.rs  postgres.rs
src/middleware/: auth.rs  rate_limiter.rs
src/models/: mfa.rs  mod.rs  passwordless.rs  session.rs  user.rs
src/routes/: auth.rs  users.rs
src/services/: auth.rs  email.rs  mfa.rs  mod.rs  passwordless.rs
src/types/: accessibility.ts  auth.ts  breach-detection.ts  hipaa-compliance.ts  hybrid-encryption.ts  index.ts  proxy-email.ts  risk-scoring.ts
src/utils/: jwt.rs  password.rs  validation.rs
tests/: api.rs
ts-client/: demo.html  package.json  tsconfig.json  webpack.config.dev.js  webpack.config.js
ts-client/src/: demo.ts  (+3 more)
(+2 files in other folders)
