[package]
name = "better-auth-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive authentication system in Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
actix-web = "4.3"
actix-cors = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["serde", "v4"] }
webauthn-rs = "0.4"
rand = "0.8"
base64 = "0.21"
thiserror = "1.0"
futures = "0.3"
